k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  type: NodePort
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
